# bazel-build-graph-explosion

./: .gitignore  MODULE.bazel  README.md
with_incoming/: README.md  rules.bzl  transition.bzl
with_incoming_and_outgoing/: BUILD.bazel  README.md  rules.bzl  setting.bzl  transition.bzl
with_incoming_and_path_mapping/: BUILD.bazel  README.md  rules.bzl  transition.bzl
with_toolchains/: BUILD.bazel  README.md  rule.bzl  toolchain.bzl  toolchain_default.bzl  transition.bzl
without_toolchains/: BUILD.bazel  rule.bzl
without_transitions/: BUILD.bazel  README.md  rules.bzl
