load(":rule.bzl", "greeting")

greeting(
    name = "hello-jaden",
    subject = "Jaden",
)

greeting(
    name = "hello-world",
    subject = "world",
)

greeting(
    name = "hello-jaden-and-world",
    subject = "Jaden",
    deps = [":hello-world"],
)

greeting(
    name = "hello-jaden-and-jaden",
    subject = "Jaden",
    deps = [":hello-jaden"],
)
